--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/logo/Kinetik Logo1 ark.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/logo/Kinetik Logo (Only with background).png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kinetik Limited |</title>
   </head>
